Refine ui. Add office image

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<!-- Favicon-->
 		<link rel="shortcut icon" href="img/fav.png">
 		<!-- Author Meta -->
-		<meta name="author" content="Colorlib">
+		<meta name="author" content="NullPointer CO., LTD">
 		<!-- Meta Description -->
-		<meta name="description" content="">
+		<meta name="description" content="珠海市空指针科技有限公司">
 		<!-- Meta Keyword -->
-		<meta name="keywords" content="">
+		<meta name="keywords" content="NullPointer, 空指针, 空指针科技">
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
@@ -27,6 +27,7 @@
 			<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 			<link rel="stylesheet" href="css/bootstrap.css">
 			<link rel="stylesheet" href="css/main.css">
+			<link rel="stylesheet" href="css/nullpointer.css">
 		</head>
 		<body>
 
@@ -36,7 +37,7 @@
 					<div class="header-wrap">
 						<div class="header-top d-flex justify-content-between align-items-center">
 							<div class="logo">
-								<a href="#home"><img witdh=119 height=45 src="img/logohorizonal.png" alt=""></a>
+								<a href="#home"><img class="logo-horizonal" src="img/logohorizonal.png" alt=""></a>
 							</div>
 							<div class="main-menubar d-flex align-items-center">
 								<nav class="hide">
@@ -56,21 +57,24 @@
 			<!-- start banner Area -->
 			<section class="banner-area relative" id="home">
 				<div class="container">
-						<div class="row fullscreen align-items-center justify-content-center">
-							<div class="banner-content col-lg-6 col-md-12">
-								<h1 class="text-uppercase">
-									We are the team <br>
-									of excellence
-								</h1>
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua.
-								</p>
-								<button class="primary-btn2 mt-20 text-uppercase ">Get Started<span class="lnr lnr-arrow-right"></span></button>
-							</div>
-							<div class="col-lg-6 d-flex align-self-end img-right">
-								<img class="img-fluid" src="img/header-img.png" alt="">
-							</div>
+					<div class="row fullscreen align-items-center justify-content-center">
+						<div class="banner-content col-lg-6 col-md-12">
+							<h1 class="text-uppercase">
+								We are the team
+								<br> of excellence
+							</h1>
+							<p>
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							</p>
+							<button class="primary-btn2 mt-20 text-uppercase ">Get Started<span class="lnr lnr-arrow-right"></span>
+							</button>
 						</div>
+						<div class="col-lg-6" style="position: relative;">
+							<img class="img-office" src="img/office.png" alt="" />
+							<img class="logo-frontdesk" src="img/logohorizonal.png" filter="white" />
+							<img class="logo-wall" src="img/logovertical.png" filter="white" />
+						</div>
+					</div>
 				</div>
 			</section>
 			<!-- End banner Area -->
