--- a/index.html
+++ b/index.html
@@ -60,11 +60,10 @@
 					<div class="row fullscreen align-items-center justify-content-center">
 						<div class="banner-content col-lg-6 col-md-12">
 							<h1 class="text-uppercase">
-								We are the team
-								<br> of excellence
+								空指针科技<br>NullPointer
 							</h1>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+								珠海市·横琴新区·濠江路8号·琴海湾
 							</p>
 							<button class="primary-btn2 mt-20 text-uppercase ">Get Started<span class="lnr lnr-arrow-right"></span>
 							</button>
