--- a/index.html
+++ b/index.html
@@ -60,10 +60,16 @@
 					<div class="row fullscreen align-items-center justify-content-center">
 						<div class="banner-content col-lg-6 col-md-12">
 							<h1 class="text-uppercase">
-								空指针科技<br>NullPointer
+								空指针科技
 							</h1>
+							<!-- Morse code of nullpointer-->
+							<h2 class="morse-code-gradient">
+								-. ..- .-.. .-...--. --- .. -. - . .-.
+							</h2>
 							<p>
 								珠海市·横琴新区·濠江路8号·琴海湾
+								<br>
+								<a href="mailto:service@nullpointer.ltd">service@nullpointer.ltd</a>
 							</p>
 							<button class="primary-btn2 mt-20 text-uppercase ">Get Started<span class="lnr lnr-arrow-right"></span>
 							</button>
@@ -85,69 +91,51 @@
 						<div class="col-lg-6">
 							<div class="single-feature d-flex flex-row pb-30">
 								<div class="icon">
-									<span class="lnr lnr-rocket"></span>
+									<span class="fa fa-android fa-middle"></span>
 								</div>
 								<div class="desc">
-									<h4 class="text-uppercase">24/7 emergency</h4>
+									<h4 class="text-uppercase">安卓全栈</h4>
 									<p>
-										inappropriate behavior is often laughed off as “boys will be boys,” <br> women face higher conduct women face higher conduct.
+										APP开发、框架调优、固件定制。 <br>
+										浸渍Android系统开发十年，丰富的互联网以及设备厂商工作经验。<br>
 									</p>
 								</div>
 							</div>
 							<div class="single-feature d-flex flex-row pb-30">
 								<div class="icon">
-									<span class="lnr lnr-chart-bars"></span>
+									<span class="fa fa-compass fa-middle"></span>
 								</div>
 								<div class="desc">
-									<h4 class="text-uppercase">X-Ray Service</h4>
+									<h4 class="text-uppercase">前端开发</h4>
 									<p>
-										inappropriate behavior is often laughed off as “boys will be boys,” <br> women face higher conduct women face higher conduct.
-									</p>
-								</div>
-							</div>
-							<div class="single-feature d-flex flex-row">
-								<div class="icon">
-									<span class="lnr lnr-bug"></span>
-								</div>
-								<div class="desc">
-									<h4 class="text-uppercase">Intensive Care</h4>
-									<p>
-										inappropriate behavior is often laughed off as “boys will be boys,” <br> women face higher conduct women face higher conduct.
+										痴迷于各类前端技术，满载的技能包。 <br> React, Angular, Weex, Vue, Node, CSS, HTML5 ...
 									</p>
 								</div>
 							</div>
 						</div>
+
 						<div class="col-lg-6">
 							<div class="single-feature d-flex flex-row pb-30">
 								<div class="icon">
-									<span class="lnr lnr-heart-pulse"></span>
+									<span class="fa fa-weixin fa-middle"></span>
 								</div>
 								<div class="desc">
-									<h4 class="text-uppercase">24/7 emergency</h4>
+									<h4 class="text-uppercase">微信周边</h4>
 									<p>
-										inappropriate behavior is often laughed off as “boys will be boys,” <br> women face higher conduct women face higher conduct.
+										微信公众号、小程序、小游戏。<br>
+										为合作伙伴构建完整的微信生态业务，提供微信运营解决方案。
 									</p>
 								</div>
 							</div>
 							<div class="single-feature d-flex flex-row pb-30">
 								<div class="icon">
-									<span class="lnr lnr-paw"></span>
+									<span class="fa fa-database fa-middle"></span>
 								</div>
 								<div class="desc">
-									<h4 class="text-uppercase">X-Ray Service</h4>
+									<h4 class="text-uppercase">后端开发</h4>
 									<p>
-										inappropriate behavior is often laughed off as “boys will be boys,” <br> women face higher conduct women face higher conduct.
-									</p>
-								</div>
-							</div>
-							<div class="single-feature d-flex flex-row">
-								<div class="icon">
-									<span class="lnr lnr-users"></span>
-								</div>
-								<div class="desc">
-									<h4 class="text-uppercase">Intensive Care</h4>
-									<p>
-										inappropriate behavior is often laughed off as “boys will be boys,” <br> women face higher conduct women face higher conduct.
+										业务梳理、数据分析、性能优化、部署运维。 <br>
+										专业团队筑造优秀品质，为合作伙伴保驾护航。
 									</p>
 								</div>
 							</div>
