--- a/index.html
+++ b/index.html
@@ -40,13 +40,12 @@
 								<a href="#home"><img class="logo-horizonal" src="img/logohorizonal.png" alt=""></a>
 							</div>
 							<div class="main-menubar d-flex align-items-center">
-								<nav class="hide">
-									<a href="#home">Home</a>
-									<a href="#service">Services</a>
-									<a href="#appoinment">Appoinment</a>
-									<a href="#consultant">Consultants</a>
+								<nav>
+									<a href="#home">首页</a>
+									<a href="#service">服务</a>
+									<a href="#products">产品</a>
 								</nav>
-								<div class="menu-bar"><span class="lnr lnr-menu"></span></div>
+								<!-- <div class="menu-bar"><span class="lnr lnr-menu"></span></div> -->
 							</div>
 						</div>
 					</div>
@@ -145,68 +144,22 @@
 			</section>
 			<!-- End feature Area -->
 
-
-			<!-- Start about Area -->
-			<section class="about-area" id="appoinment">
-				<div class="container-fluid">
-					<div class="row d-flex justify-content-end align-items-center">
-						<div class="col-lg-6 col-md-12 about-left no-padding">
-							<img class="img-fluid" src="img/about-img.jpg" alt="">
-						</div>
-						<div class="col-lg-6 col-md-12 about-right no-padding">
-							<h1>Book an <br> Appoinment</h1>
-							<form class="booking-form" id="myForm" action="donate.php">
-								 	<div class="row">
-								 		<div class="col-lg-12 d-flex flex-column">
-							 				<input name="name" placeholder="Patient name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Patient name'" class="form-control mt-20" required="" type="text" required>
-								 		</div>
-							 			<div class="col-lg-6 d-flex flex-column">
-											<input name="phone" placeholder="Phone" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Phone'" class="form-control mt-20" required="" type="text" required>
-										</div>
-										<div class="col-lg-6 d-flex flex-column">
-											<input id="datepicker2" name="app-date" class="single-in mt-20"  onblur="this.placeholder = 'Appoinment date'" type="text" placeholder="Appoinment date" required>
-										</div>
-										<div class="col-lg-12 flex-column">
-											<textarea class="form-control mt-20" name="message" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required=""></textarea>
-										</div>
-
-										<div class="col-lg-12 d-flex justify-content-end send-btn">
-											<button class="submit-btn primary-btn mt-20 text-uppercase ">confirm booking<span class="lnr lnr-arrow-right"></span></button>
-										</div>
-
-										<div class="alert-msg"></div>
-									</div>
-					  		</form>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- End about Area -->
-
 			<!-- Start consultans Area -->
-			<section class="consultans-area section-gap" id="consultant">
+			<section class="consultans-area section-gap" id="products">
 				<div class="container">
-					<div class="row d-flex justify-content-center">
-						<div class="col-md-8 pb-80 header-text">
-							<h1>Our Consultants</h1>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> labore  et dolore magna aliqua.
-							</p>
-						</div>
-					</div>
 					<div class="row">
 						<div class="col-lg-3 col-md-3 vol-wrap">
 							<div class="single-con">
 								<div class="content">
 								    <a href="#" target="_blank">
-								      <div class="content-overlay"></div>
-								  		 <img class="content-image img-fluid d-block mx-auto" src="img/c1.jpg" alt="">
-								      	<div class="content-details fadeIn-bottom">
-								      		<h4>Andy Florence</h4>
-								      		<p>
-								      			inappropriate behavior
-								      		</p>
+								      	<div class="content-overlay"></div>
+								  		<img class="content-image img-fluid d-block mx-auto product-logo" src="img/products/xiaoniudushu-logo.png" alt="">
+										<div class="product-text">
+											<h4>小牛读书</h4>
+											<p>微信公众号：阅享青春·伴你成长</p>
+										</div>  
+										<div class="content-details fadeIn-bottom">
+											<img class="content-image img-fluid d-block mx-auto product-qrcode" src="img/products/xiaoniudushu-qrcode.png" alt="">
 								      	</div>
 								    </a>
 								 </div>
@@ -216,13 +169,14 @@
 							<div class="single-con">
 								<div class="content">
 								    <a href="#" target="_blank">
-								      <div class="content-overlay"></div>
-								  		 <img class="content-image img-fluid d-block mx-auto" src="img/c2.jpg" alt="">
-								      	<div class="content-details fadeIn-bottom">
-								      		<h4>Andy Florence</h4>
-								      		<p>
-								      			inappropriate behavior
-								      		</p>
+								      	<div class="content-overlay"></div>
+								  	  	<img class="content-image img-fluid d-block mx-auto product-logo" src="img/products/brickout-logo.png" alt="">
+									  	<div class="product-text">
+											<h4>消除砖块</h4>
+											<p>微信小游戏：休闲娱乐·组队拿奖</p>
+									  	</div>									  
+									  	<div class="content-details fadeIn-bottom">
+											<img class="content-image img-fluid d-block mx-auto product-qrcode" src="img/products/brickout-qrcode.png" alt="">
 								      	</div>
 								    </a>
 								 </div>
@@ -232,13 +186,14 @@
 							<div class="single-con">
 								<div class="content">
 								    <a href="#" target="_blank">
-								      <div class="content-overlay"></div>
-								  		 <img class="content-image img-fluid d-block mx-auto" src="img/c3.jpg" alt="">
-								      	<div class="content-details fadeIn-bottom">
-								      		<h4>Andy Florence</h4>
-								      		<p>
-								      			inappropriate behavior
-								      		</p>
+								      	<div class="content-overlay"></div>
+								  		<img class="content-image img-fluid d-block mx-auto product-logo" src="img/products/securitymaster-logo.png" alt="">
+										<div class="product-text">
+											<h4>手机安全监控</h4>
+											<p>Android APP：状态上报·远程监控</p>
+										</div>  
+										<div class="content-details fadeIn-bottom">
+											<img class="content-image img-fluid d-block mx-auto product-qrcode" src="img/products/securitymaster-qrcode.png" alt="">
 								      	</div>
 								    </a>
 								 </div>
@@ -248,13 +203,14 @@
 							<div class="single-con">
 								<div class="content">
 								    <a href="#" target="_blank">
-								      <div class="content-overlay"></div>
-								  		 <img class="content-image img-fluid d-block mx-auto" src="img/c4.jpg" alt="">
-								      	<div class="content-details fadeIn-bottom">
-								      		<h4>Andy Florence</h4>
-								      		<p>
-								      			inappropriate behavior
-								      		</p>
+								    	<div class="content-overlay"></div>
+								  		<img class="content-image img-fluid d-block mx-auto product-logo" src="img/products/woju-logo.png" alt="">
+										<div class="product-text">
+											<h4>门禁管理系统</h4>
+											<p>桌面/移动应用：小区门禁·综合管理</p>
+										</div>  
+										<div class="content-details fadeIn-bottom">
+											<img class="content-image img-fluid d-block mx-auto product-qrcode" src="img/products/woju-qrcode.png" alt="">
 								      	</div>
 								    </a>
 								 </div>
@@ -266,174 +222,26 @@
 			</section>
 			<!-- End consultans Area -->
 
-			<!-- Start fact Area -->
-			<section class="facts-area pt-100 pb-100">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-3 col-md-6 single-fact">
-							<h2 class="counter">2536</h2>
-							<p class="text-uppercase">Clients Served</p>
-						</div>
-						<div class="col-lg-3 col-md-6 single-fact">
-							<h2 class="counter">6784</h2>
-							<p class="text-uppercase">X-rays Done</p>
-						</div>
-						<div class="col-lg-3 col-md-6 single-fact">
-							<h2 class="counter">1059</h2>
-							<p class="text-uppercase">Worldwide stuff</p>
-						</div>
-						<div class="col-lg-3 col-md-6 single-fact">
-							<h2 class="counter">2239</h2>
-							<p class="text-uppercase">Lives Saved</p>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- end fact Area -->
-
-			<!-- Start blog Area -->
-			<section class="blog-area section-gap">
-				<div class="container">
-					<div class="row justify-content-center">
-						<div class="col-md-8 pb-30 header-text">
-							<h1>Our Recent Blogs</h1>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> labore  et dolore magna aliqua.
-							</p>
-						</div>
-					</div>
-					<div class="row">
-						<div class="single-blog col-lg-4 col-md-4">
-
-							<img class="f-img img-fluid mx-auto" src="img/b1.jpg" alt="">
-							<h4>
-								<a href="#">Portable Fashion for young women</a>
-							</h4>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip exea.
-								 commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-							</p>
-							<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
-								<div>
-									<img class="img-fluid" src="img/user.png" alt="">
-									<a href="#"><span>Mark Wiens</span></a>
-								</div>
-								<div class="meta">
-									13th Dec
-									<span class="lnr lnr-heart"></span> 15
-									<span class="lnr lnr-bubble"></span> 04
-								</div>
-							</div>
-						</div>
-						<div class="single-blog col-lg-4 col-md-4">
-							<img class="f-img img-fluid mx-auto" src="img/b2.jpg" alt="">
-							<h4>
-								<a href="#">Summer ware are coming</a>
-							</h4>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip exea.
- 								commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-							</p>
-							<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
-								<div>
-									<img class="img-fluid" src="img/user.png" alt="">
-									<a href="#"><span>Mark Wiens</span></a>
-								</div>
-								<div class="meta">
-									13th Dec
-									<span class="lnr lnr-heart"></span> 15
-									<span class="lnr lnr-bubble"></span> 04
-								</div>
-							</div>
-						</div>
-						<div class="single-blog col-lg-4 col-md-4">
-							<img class="f-img img-fluid mx-auto" src="img/b3.jpg" alt="">
-							<h4>
-								<a href="#">Summer ware are coming</a>
-							</h4>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.
-							</p>
-							<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
-								<div>
-									<img class="img-fluid" src="img/user.png" alt="">
-									<a href="#"><span>Mark Wiens</span></a>
-								</div>
-								<div class="meta">
-									13th Dec
-									<span class="lnr lnr-heart"></span> 15
-									<span class="lnr lnr-bubble"></span> 04
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- end blog Area -->
-
 			<!-- start footer Area -->
 			<footer class="footer-area section-gap">
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-2  col-md-6">
-							<div class="single-footer-widget">
-								<h6>Top Products</h6>
-								<ul class="footer-nav">
-									<li><a href="#">Managed Website</a></li>
-									<li><a href="#">Manage Reputation</a></li>
-									<li><a href="#">Power Tools</a></li>
-									<li><a href="#">Marketing Service</a></li>
-								</ul>
-							</div>
-						</div>
 						<div class="col-lg-4  col-md-6">
 							<div class="single-footer-widget mail-chimp">
-								<h6 class="mb-20">Contact Us</h6>
+								<h6 class="mb-20">联系我们</h6>
 								<p>
-									56/8, bir uttam qazi nuruzzaman road, west panthapath, kalabagan, Dhanmondi, Dhaka - 1205
+									珠海市·横琴新区·濠江路8号·琴海湾
+									<br>
+									<a href="mailto:service@nullpointer.ltd">service@nullpointer.ltd</a>
 								</p>
-								<h3>012-6532-568-9746</h3>
-								<h3>012-6532-568-97468</h3>
-							</div>
-						</div>
-						<div class="col-lg-6  col-md-12">
-							<div class="single-footer-widget newsletter">
-								<h6>Newsletter</h6>
-								<p>You can trust us. we only send promo offers, not a single spam.</p>
-								<div id="mc_embed_signup">
-									<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="form-inline">
-
-										<div class="form-group row" style="width: 100%">
-											<div class="col-lg-8 col-md-12">
-												<input name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
-												<div style="position: absolute; left: -5000px;">
-													<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-												</div>
-											</div>
-
-											<div class="col-lg-4 col-md-12">
-												<button class="nw-btn primary-btn">Subscribe<span class="lnr lnr-arrow-right"></span></button>
-											</div>
-										</div>
-										<div class="info"></div>
-									</form>
-								</div>
 							</div>
 						</div>
 					</div>
 
 					<div class="row footer-bottom d-flex justify-content-between">
 						<p class="col-lg-8 col-sm-12 footer-text m-0">
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-							Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+							Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | NullPointer CO., LTD
 						</p>
-						<div class="col-lg-4 col-sm-12 footer-social">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-dribbble"></i></a>
-							<a href="#"><i class="fa fa-behance"></i></a>
-						</div>
 					</div>
 				</div>
 			</footer>
