--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<!-- Favicon-->
 		<link rel="shortcut icon" href="img/fav.png">
 		<!-- Author Meta -->
-		<meta name="author" content="NullPointer CO., LTD">
+		<meta name="author" content="空指针科技">
 		<!-- Meta Description -->
 		<meta name="description" content="珠海市空指针科技有限公司">
 		<!-- Meta Keyword -->
@@ -14,7 +14,7 @@
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
-		<title>NullPointer CO., LTD</title>
+		<title>空指针科技</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
 			<!--
@@ -70,7 +70,7 @@
 								<br>
 								<a href="mailto:service@nullpointer.ltd">service@nullpointer.ltd</a>
 							</p>
-							<button class="primary-btn2 mt-20 text-uppercase ">Get Started<span class="lnr lnr-arrow-right"></span>
+							<button class="primary-btn2 mt-20 text-uppercase ">了解更多<span class="lnr lnr-arrow-right"></span>
 							</button>
 						</div>
 						<div class="col-lg-6" style="position: relative;">
