--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 								<a href="#home"><img class="logo-horizonal" src="img/logohorizonal.png" alt=""></a>
 							</div>
 							<div class="main-menubar d-flex align-items-center">
-								<nav>
+								<nav class="hide">
 									<a href="#home">首页</a>
 									<a href="#service">服务</a>
 									<a href="#products">产品</a>
 								</nav>
-								<!-- <div class="menu-bar"><span class="lnr lnr-menu"></span></div> -->
+								<div class="menu-bar"><span class="lnr lnr-menu"></span></div>
 							</div>
 						</div>
 					</div>
@@ -73,10 +73,8 @@
 							<button class="primary-btn2 mt-20 text-uppercase ">了解更多<span class="lnr lnr-arrow-right"></span>
 							</button>
 						</div>
-						<div class="col-lg-6" style="position: relative;">
-							<img class="img-office" src="img/office.png" alt="" />
-							<img class="logo-frontdesk" src="img/logohorizonal.png" filter="white" />
-							<img class="logo-wall" src="img/logovertical.png" filter="white" />
+						<div class="col-lg-6 col-md-12">
+							<img class="img-office" src="img/office.png" alt="Office" />
 						</div>
 					</div>
 				</div>
@@ -87,7 +85,7 @@
 			<section class="feature-area section-gap" id="service">
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-6">
+						<div class="col-lg-6 col-md-12">
 							<div class="single-feature d-flex flex-row pb-30">
 								<div class="icon">
 									<span class="fa fa-android fa-middle"></span>
@@ -113,7 +111,7 @@
 							</div>
 						</div>
 
-						<div class="col-lg-6">
+						<div class="col-lg-6 col-md-12">
 							<div class="single-feature d-flex flex-row pb-30">
 								<div class="icon">
 									<span class="fa fa-weixin fa-middle"></span>
