--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							<button class="primary-btn2 mt-20 text-uppercase ">了解更多<span class="lnr lnr-arrow-right"></span>
 							</button>
 						</div>
-						<div class="col-lg-6 col-md-12">
+						<div class="col-lg-6 col-md-12 img-office">
 							<img class="img-office" src="img/office.png" alt="Office" />
 						</div>
 					</div>
