--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
 
 					<div class="row footer-bottom d-flex justify-content-between">
 						<p class="col-lg-8 col-sm-12 footer-text m-0">
-							Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | NullPointer CO., LTD
+							Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved. <br>
+							NullPointer CO., LTD
 						</p>
 					</div>
 				</div>
