Add qrcode of woju

--- a/index.html
+++ b/index.html
@@ -184,23 +184,6 @@
 							<div class="single-con">
 								<div class="content">
 								    <a href="#" target="_blank">
-								      	<div class="content-overlay"></div>
-								  		<img class="content-image img-fluid d-block mx-auto product-logo" src="img/products/securitymaster-logo.png" alt="">
-										<div class="product-text">
-											<h4>手机安全监控</h4>
-											<p>Android APP：状态上报·远程监控</p>
-										</div>  
-										<div class="content-details fadeIn-bottom">
-											<img class="content-image img-fluid d-block mx-auto product-qrcode" src="img/products/securitymaster-qrcode.png" alt="">
-								      	</div>
-								    </a>
-								 </div>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-3 vol-wrap">
-							<div class="single-con">
-								<div class="content">
-								    <a href="#" target="_blank">
 								    	<div class="content-overlay"></div>
 								  		<img class="content-image img-fluid d-block mx-auto product-logo" src="img/products/woju-logo.png" alt="">
 										<div class="product-text">
@@ -214,8 +197,24 @@
 								 </div>
 							</div>
 						</div>
-
-					</div>
+						<div class="col-lg-3 col-md-3 vol-wrap">
+							<div class="single-con">
+								<div class="content">
+									<a href="#" target="_blank">
+										<div class="content-overlay"></div>
+										<img class="content-image img-fluid d-block mx-auto product-logo" src="img/products/securitymaster-logo.png" alt="">
+										<div class="product-text">
+											<h4>手机安全监控</h4>
+											<p>Android APP：状态上报·远程监控</p>
+										</div>
+										<div class="content-details fadeIn-bottom">
+											<!-- <img class="content-image img-fluid d-block mx-auto product-qrcode" src="img/products/securitymaster-qrcode.png" alt=""> -->
+										</div>
+									</a>
+								</div>
+							</div>
+						</div>
+						</div>
 				</div>
 			</section>
 			<!-- End consultans Area -->
