--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 							</div>
 							<div class="main-menubar d-flex align-items-center">
 								<nav class="hide">
-									<a href="#home">首页</a>
-									<a href="#service">服务</a>
-									<a href="#products">产品</a>
+									<a href="#home" data-localize="home">首页</a>
+									<a href="#service" data-localize="service">服务</a>
+									<a href="#products" data-localize="products">产品</a>
 								</nav>
 								<div class="menu-bar"><span class="lnr lnr-menu"></span></div>
 							</div>
@@ -58,7 +58,7 @@
 				<div class="container">
 					<div class="row fullscreen align-items-center justify-content-center">
 						<div class="banner-content col-lg-6 col-md-12">
-							<h1 class="text-uppercase">
+							<h1 class="text-uppercase" data-localize="company">
 								空指针科技
 							</h1>
 							<!-- Morse code of nullpointer-->
@@ -73,7 +73,7 @@
 							<button class="primary-btn2 mt-20 text-uppercase ">了解更多<span class="lnr lnr-arrow-right"></span>
 							</button>
 						</div>
-						<div class="col-lg-6 col-md-12 img-office">
+						<div class="col-lg-6 col-md-12" style="text-align: center;">
 							<img class="img-office" src="img/office.png" alt="Office" />
 						</div>
 					</div>
@@ -256,6 +256,7 @@
 			<script src="js/jquery.magnific-popup.min.js"></script>
 			<script src="js/waypoints.min.js"></script>
 			<script src="js/jquery.counterup.min.js"></script>
+			<script src="js/jquery.localize.min.js"></script>
 			<script src="js/main.js"></script>
 		</body>
 	</html>
