--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<h2 class="morse-code-gradient">
 								-. ..- .-.. .-...--. --- .. -. - . .-.
 							</h2>
-							<p>
+							<p data-localize="address">
 								珠海市·横琴新区·濠江路8号·琴海湾
 								<br>
 								<a href="mailto:service@nullpointer.ltd">service@nullpointer.ltd</a>
