--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
-		<title>空指针科技</title>
+		<title data-localize="company.full">空指针科技</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
 			<!--
@@ -41,9 +41,9 @@
 							</div>
 							<div class="main-menubar d-flex align-items-center">
 								<nav class="hide">
-									<a href="#home" data-localize="home">首页</a>
-									<a href="#service" data-localize="service">服务</a>
-									<a href="#products" data-localize="products">产品</a>
+									<a href="#home" data-localize="menu.home">首页</a>
+									<a href="#service" data-localize="menu.service">服务</a>
+									<a href="#products" data-localize="menu.products">产品</a>
 								</nav>
 								<div class="menu-bar"><span class="lnr lnr-menu"></span></div>
 							</div>
@@ -58,19 +58,19 @@
 				<div class="container">
 					<div class="row fullscreen align-items-center justify-content-center">
 						<div class="banner-content col-lg-6 col-md-12">
-							<h1 class="text-uppercase" data-localize="company">
+							<h1 class="text-uppercase" data-localize="company.short">
 								空指针科技
 							</h1>
 							<!-- Morse code of nullpointer-->
 							<h2 class="morse-code-gradient">
 								-. ..- .-.. .-...--. --- .. -. - . .-.
 							</h2>
-							<p data-localize="address">
-								珠海市·横琴新区·濠江路8号·琴海湾
-								<br>
+							<p>
+								<div data-localize="company.address">珠海市·横琴新区·濠江路8号·琴海湾</div>
 								<a href="mailto:service@nullpointer.ltd">service@nullpointer.ltd</a>
 							</p>
-							<button class="primary-btn2 mt-20 text-uppercase ">了解更多<span class="lnr lnr-arrow-right"></span>
+							<button class="primary-btn2 mt-20 text-uppercase">
+								<div data-localize="menu.more">了解更多</div><span class="lnr lnr-arrow-right"></span>
 							</button>
 						</div>
 						<div class="col-lg-6 col-md-12" style="text-align: center;">
@@ -91,7 +91,7 @@
 									<span class="fa fa-android fa-middle"></span>
 								</div>
 								<div class="desc">
-									<h4 class="text-uppercase">安卓全栈</h4>
+									<h4 class="text-uppercase" data-localize="service.android">安卓全栈</h4>
 									<p>
 										APP开发、框架调优、固件定制。 <br>
 										浸渍Android系统开发十年，丰富的互联网以及设备厂商工作经验。<br>
@@ -103,7 +103,7 @@
 									<span class="fa fa-compass fa-middle"></span>
 								</div>
 								<div class="desc">
-									<h4 class="text-uppercase">前端开发</h4>
+									<h4 class="text-uppercase" data-localize="service.frontend">前端开发</h4>
 									<p>
 										痴迷于各类前端技术，满载的技能包。 <br> React, Angular, Weex, Vue, Node, CSS, HTML5 ...
 									</p>
@@ -117,7 +117,7 @@
 									<span class="fa fa-weixin fa-middle"></span>
 								</div>
 								<div class="desc">
-									<h4 class="text-uppercase">微信周边</h4>
+									<h4 class="text-uppercase" data-localize="service.wechat">微信周边</h4>
 									<p>
 										微信公众号、小程序、小游戏。<br>
 										为合作伙伴构建完整的微信生态业务，提供微信运营解决方案。
@@ -129,7 +129,7 @@
 									<span class="fa fa-database fa-middle"></span>
 								</div>
 								<div class="desc">
-									<h4 class="text-uppercase">后端开发</h4>
+									<h4 class="text-uppercase" data-localize="service.backend">后端开发</h4>
 									<p>
 										业务梳理、数据分析、性能优化、部署运维。 <br>
 										专业团队筑造优秀品质，为合作伙伴保驾护航。
@@ -153,7 +153,7 @@
 								      	<div class="content-overlay"></div>
 								  		<img class="content-image img-fluid d-block mx-auto product-logo" src="img/products/xiaoniudushu-logo.png" alt="">
 										<div class="product-text">
-											<h4>小牛读书</h4>
+											<h4 data-localize="product.xiaoniudushu">小牛读书</h4>
 											<p>微信公众号：阅享青春·伴你成长</p>
 										</div>  
 										<div class="content-details fadeIn-bottom">
@@ -170,7 +170,7 @@
 								      	<div class="content-overlay"></div>
 								  	  	<img class="content-image img-fluid d-block mx-auto product-logo" src="img/products/brickout-logo.png" alt="">
 									  	<div class="product-text">
-											<h4>消除砖块</h4>
+											<h4 data-localize="product.brickout">消除砖块</h4>
 											<p>微信小游戏：休闲娱乐·组队拿奖</p>
 									  	</div>									  
 									  	<div class="content-details fadeIn-bottom">
@@ -187,7 +187,7 @@
 								    	<div class="content-overlay"></div>
 								  		<img class="content-image img-fluid d-block mx-auto product-logo" src="img/products/woju-logo.png" alt="">
 										<div class="product-text">
-											<h4>门禁管理系统</h4>
+											<h4 data-localize="product.doorguard">门禁管理系统</h4>
 											<p>桌面/移动应用：小区门禁·综合管理</p>
 										</div>  
 										<div class="content-details fadeIn-bottom">
@@ -204,7 +204,7 @@
 										<div class="content-overlay"></div>
 										<img class="content-image img-fluid d-block mx-auto product-logo" src="img/products/securitymaster-logo.png" alt="">
 										<div class="product-text">
-											<h4>手机安全监控</h4>
+											<h4 data-localize="product.security">手机安全监控</h4>
 											<p>Android APP：状态上报·远程监控</p>
 										</div>
 										<div class="content-details fadeIn-bottom">
@@ -223,12 +223,11 @@
 			<footer class="footer-area section-gap">
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-4  col-md-6">
+						<div class="col-lg-6  col-md-6">
 							<div class="single-footer-widget mail-chimp">
-								<h6 class="mb-20">联系我们</h6>
+								<h6 class="mb-20" data-localize="contact">联系我们</h6>
 								<p>
-									珠海市·横琴新区·濠江路8号·琴海湾
-									<br>
+									<div data-localize="company.address">珠海市·横琴新区·濠江路8号·琴海湾</div>
 									<a href="mailto:service@nullpointer.ltd">service@nullpointer.ltd</a>
 								</p>
 							</div>
