--- a/index.html
+++ b/index.html
@@ -233,6 +233,14 @@
 								</p>
 							</div>
 						</div>
+						<div class="col-lg-6 col-md-6">
+							<div>
+								<select class="language-select">
+									<option value="zh">简体中文</option>
+									<option value="en">English</option>
+								</select>
+							</div>
+						</div>
 					</div>
 
 					<div class="row footer-bottom d-flex justify-content-between">
@@ -240,6 +248,7 @@
 							Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved. <br>
 							NullPointer CO., LTD
 						</p>
+						
 					</div>
 				</div>
 			</footer>
