--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<div data-localize="company.address">珠海市·横琴新区·濠江路8号·琴海湾</div>
 								<a href="mailto:service@nullpointer.ltd">service@nullpointer.ltd</a>
 							</p>
-							<button class="primary-btn2 mt-20 text-uppercase">
+							<button class="primary-btn2 text-uppercase">
 								<div data-localize="menu.more">了解更多</div><span class="lnr lnr-arrow-right"></span>
 							</button>
 						</div>
