Add Baidu site verification

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<meta name="keywords" content="NullPointer, 空指针, 空指针科技">
 		<!-- meta character set -->
 		<meta charset="UTF-8">
+		<!-- Baidu site verification -->
+		<meta name="baidu-site-verification" content="Jxtni5imy2" />
 		<!-- Site Title -->
 		<title data-localize="company.full">空指针科技</title>
 
