--- a/index.html
+++ b/index.html
@@ -246,11 +246,14 @@
 					</div>
 
 					<div class="row footer-bottom d-flex justify-content-between">
-						<p class="col-lg-8 col-sm-12 footer-text m-0">
+						<p class="col-lg-6 col-sm-10 footer-text m-0">
 							Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved. <br>
 							NullPointer CO., LTD
 						</p>
 						
+						<p class="col-lg-6 col-sm-2 footer-text">
+							<a href="http://www.miitbeian.gov.cn" target="_blank">粤ICP备18078168号</a><br>
+						</p>
 					</div>
 				</div>
 			</footer>
