--- a/index.html
+++ b/index.html
@@ -252,7 +252,8 @@
 						</p>
 						
 						<p class="col-lg-6 col-sm-2 footer-text">
-							<a href="http://www.miitbeian.gov.cn" target="_blank">粤ICP备18078168号</a><br>
+							<a target="_blank" href="http://www.miitbeian.gov.cn">粤ICP备18078168号</a><br>
+							<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=44049202000231"><img src="img/beian.png"/>粤公网安备 44049202000231号</a>
 						</p>
 					</div>
 				</div>
